# chess26

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  readme.txt
include/: bitboard.hpp  board.hpp  computer.hpp  gui.hpp  move.hpp  move_generator.hpp  move_list.hpp  piece.hpp  pos_eval.hpp  transp_table.hpp  utils.hpp  zobrist.hpp
include/core/: board.hpp
include/core/move/: history.hpp  move.hpp  move_generator.hpp  move_list.hpp
include/core/piece/: color.hpp  piece.hpp
include/core/utils/: constants.hpp  cpu.hpp  file.hpp  logger.hpp  mask.hpp
include/engine/: book.hpp  engine.hpp  engine_manager.hpp  pos_eval.hpp  transp_table.hpp  zobrist.hpp
include/engine/config/: eval.hpp
include/engine/eval/: move_eval_increment.hpp  pawn_entry.hpp  pos_eval.hpp
include/engine/utils/: random.hpp
include/interface/: gui.hpp  uci.hpp
lib/fathom/: tbchess.c  tbconfig.h  tbhelper.h  tbprobe.c
src/: board.cpp  main.cpp  utils.cpp
src/board/: board.cpp  board_io.cpp
src/common/: constants.hpp  cpu.hpp  fatal.hpp  file.hpp  logger.cpp  logger.hpp
src/computer/: computer.cpp
src/computer/features/: qsearch.cpp  see.cpp
src/core/board/: board.cpp  board.hpp  board_io.cpp  board_move_check.cpp  zobrist.cpp  zobrist.hpp
src/core/move/: history.hpp  magic_generator.cpp  move.hpp  move_generator.cpp  move_list.hpp  pext_generator.cpp
src/core/move/generator/: magic_generator.cpp  move_generator.cpp  move_generator.hpp  pext_generator.cpp
src/core/piece/: piece.hpp
src/engine/: book.cpp  engine.cpp  engine_manager.hpp  pos_eval.cpp
src/engine/config/: config.hpp  eval.hpp  texel_param.hpp
src/engine/eval/: book.cpp  book.hpp  move_eval_increment.hpp  pawn_entry.hpp  pos_eval.cpp  pos_eval.hpp  see.cpp  tablebase.hpp  virtual_board.hpp
src/engine/eval/tablebase/: tablebase.hpp
src/engine/eval/tuning/: eval_features.hpp  pos_eval_tuning.cpp  texel_tuning.hpp
src/engine/features/: qsearch.cpp  see.cpp  zobrist.cpp
src/engine/search/: move_picker.hpp  negamax.cpp  qsearch.cpp  worker.cpp  worker.hpp
src/engine/tt/: transp_table.hpp
src/gui/: gui.cpp
src/interface/: gui.cpp  gui.hpp  uci.hpp  uci_option.hpp
src/move/: move_generator.cpp  zobrist.cpp
src/utils/: logger.cpp
tests/: test_board.cpp  test_spsa_uci_option.cpp  test_transp_table.cpp  test_zorbist.cpp  tests.cpp  tests_board.cpp
tests/eval/: test_engine.cpp  test_eval_state.cpp  test_tb.cpp
tests/eval/texel/: test_eval.cpp
tests/move/: test_history.cpp  test_mailbox.cpp  tests_castling.cpp  tests_gen_move.cpp  tests_logic_move.cpp  tests_move.cpp  tests_play_move.cpp
